<resources>
    <string name="app_name">My_Taxi</string>
    <string name="driverBtn">Я водитель</string>
    <string name="customerBtn">Я Клиент</string>
    <string name="email">Login</string>
    <string name="password">Password</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Регистрация</string>
    <string name="driverStatus">Вход для водителей</string>
    <string name="createQuestion">Ещё нет аккаунта?</string>
    <string name="title_activity_drivers_map">DriversMapActivity</string>
    <string name="title_activity_customers_maps">CustomersMapsActivity</string>
</resources>